<resources>
    <string name="app_name">DroidLogicFactoryMenu</string>
    <string name="factory_menu">Factory Menu</string>
    <string name="Start">Start</string>
    <string name="choosedb">请选择db文件</string>
    <string name="AutoADC">ADC自动校正</string>
    <string name="setsuccess">设置成功</string>
    <string name="setfail">设置失败</string>
    <string name="ADCProgressing">ADC校正进行中，请稍候……</string>
    <string name="sureadc">确定进行ADC自动校正，请拔掉所有信号线，然后点击确定</string>
    <string name="ADCSuccess">校正成功！</string>
    <string name="ADCFailure">校正失败！</string>
    <string name="factorymenu_title">Factory Menu</string>
    <string name="designmenu_title">Design Menu</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_info_title">Attention</string>
    <string name="dialog_input_title">Please input value:</string>
    <string name="synbol_qianfenhao">‰</string>
    <string name="symbol_macmaohao">:</string>
    <string name="cannotskipall">can not skip all programs</string>
    <string name="nopro">The booked program dose not exist or has been deleted </string>
    <string name="ResetSuccess">复位成功,重启系统!</string>
    <string name="ResetInfo">重启系统...!</string>
    <string name="ResetFailure">操作失败!</string>
    <string name="facui_adc">ADC校正</string>
    <string name="facui_adc_port">端口</string>
    <string name="facui_adc_port_rgb">RGB</string>
    <string name="facui_adc_port_ypbpr">YPBPR</string>
    <string name="facui_adc_auto">自动校正</string>
    <string name="facui_picmode">图像模式</string>
    <string name="facui_picmode_port">端口</string>
    <string name="facui_picmode_port_tv">ATV</string>
    <string name="facui_picmode_port_av">AV</string>
    <string name="facui_picmode_port_ypbpr">YPBPR</string>
    <string name="facui_picmode_port_hdmi">HDMI</string>
    <string name="facui_picmode_port_vga">VGA</string>
    <string name="facui_picmode_port_mpeg">MPEG</string>
    <string name="facui_picmode_port_dtv">DTV</string>
    <string name="facui_picmode_mode">模式</string>
    <string name="facui_picmode_mode_standard">标准</string>
    <string name="facui_picmode_mode_light">明亮</string>
    <string name="facui_picmode_mode_soft">柔和</string>
    <string name="facui_picmode_mode_user">用户</string>
    <string name="facui_picmode_brightness">亮度</string>
    <string name="facui_picmode_contrast">对比度</string>
    <string name="facui_picmode_color">色饱和度</string>
    <string name="facui_picmode_definition">清晰度</string>
    <string name="facui_picmode_tone">色调</string>
    <string name="facui_picmode_restoration">恢复</string>
    <string name="facui_fbcpicmode_mode">FBC模式</string>
    <string name="facui_fbcpicmode_mode_standard">标准</string>
    <string name="facui_fbcpicmode_mode_light">明亮</string>
    <string name="facui_fbcpicmode_mode_soft">柔和</string>
    <string name="facui_fbcpicmode_mode_movie">电影</string>
    <string name="facui_fbcpicmode_mode_user">用户</string>
    <string name="facui_fbcpicmode_brightness">FBC亮度</string>
    <string name="facui_fbcpicmode_contrast">FBC对比度</string>
    <string name="facui_fbcpicmode_color">FBC色饱和度</string>
    <string name="facui_fbcpicmode_tone">FBC色调</string>
    <string name="facui_fbcpicmode_backlight">FBC背光</string>
    <string name="facui_whtblan">白平衡</string>
    <string name="facui_whtblan_port">端口</string>
    <string name="facui_whtblan_port_atv">ATV</string>
    <string name="facui_whtblan_port_av">AV</string>
    <string name="facui_whtblan_port_ypbpr">YPBPR</string>
    <string name="facui_whtblan_port_hdmi">HDMI</string>
    <string name="facui_whtblan_port_media">MEDIA</string>
    <string name="facui_whtblan_mode">模式</string>
    <string name="facui_whtblan_mode_standard">标准</string>
    <string name="facui_whtblan_mode_cool">冷色</string>
    <string name="facui_whtblan_mode_warm">暖色</string>
    <string name="facui_whtblan_mode_user">用户</string>
    <string name="facui_whtblan_mode_max">最大</string>
    <string name="facui_whtblan_gain_r">R_GAIN</string>
    <string name="facui_whtblan_gain_g">G_GAIN</string>
    <string name="facui_whtblan_gain_b">B_GAIN</string>
    <string name="facui_whtblan_offset_r">R_OFFSET</string>
    <string name="facui_whtblan_offset_g">G_OFFSET</string>
    <string name="facui_whtblan_offset_b">B_OFFSET</string>
    <string name="facui_whtblan_restoration">恢复</string>
    <string name="facui_fbcwhtblan_init">FBC白平衡初始化状态</string>
    <string name="facui_fbcwhtblan_mode">FBC模式</string>
    <string name="facui_fbcwhtblan_gain_r">FBC_R_GAIN</string>
    <string name="facui_fbcwhtblan_gain_g">FBC_G_GAIN</string>
    <string name="facui_fbcwhtblan_gain_b">FBC_B_GAIN</string>
    <string name="facui_fbcwhtblan_offset_r">FBC_R_OFFSET</string>
    <string name="facui_fbcwhtblan_offset_g">FBC_G_OFFSET</string>
    <string name="facui_fbcwhtblan_offset_b">FBC_B_OFFSET</string>
    <string name="facui_ssc">SSC</string>
    <string name="facui_ssc_lvds_ddr_ssc">SSC</string>
    <string name="facui_ssc_lvds_on">开</string>
    <string name="facui_ssc_lvds_off">关</string>
    <string name="facui_ssc_ddr">DDR SSC</string>
    <string name="facui_ssc_lvds">LVDS SSC</string>
    <string name="facui_dym_bl">dynamic backlight</string>
    <string name="facui_dym_bl_ATV">ATV</string>
    <string name="facui_dym_bl_DTV">DTV</string>
    <string name="facui_dym_bl_YPBPR">YPBPR</string>
    <string name="facui_dym_bl_AV">AV</string>
    <string name="facui_dym_bl_HDMI">HDMI</string>
    <string name="facui_nolinear">非线性</string>
    <string name="facui_nolinear_port">端口</string>
    <string name="facui_nolinear_port_tv">TV</string>
    <string name="facui_nolinear_port_av">AV</string>
    <string name="facui_nolinear_port_svideo">SVIDEO</string>
    <string name="facui_nolinear_port_ypbpr">YPBPR</string>
    <string name="facui_nolinear_port_hdmi">HDMI</string>
    <string name="facui_nolinear_brightness">亮度</string>
    <string name="facui_nolinear_contrast">对比度</string>
    <string name="facui_nolinear_saturation">色度</string>
    <string name="facui_nolinear_definition">清晰度</string>
    <string name="facui_nolinear_tone">色调</string>
    <string name="facui_nolinear_volumn">音量</string>
    <string name="facui_nolinear_osd0">OSD_0</string>
    <string name="facui_nolinear_osd25">OSD_25</string>
    <string name="facui_nolinear_osd50">OSD_50</string>
    <string name="facui_nolinear_osd75">OSD_75</string>
    <string name="facui_nolinear_osd100">OSD_100</string>
    <string name="facui_chongxian">重显率</string>
    <string name="facui_chongxian_port">端口</string>
    <string name="facui_chongxian_port_tv">TV</string>
    <string name="facui_chongxian_port_av">AV</string>
    <string name="facui_chongxian_port_svideo">SVIDEO</string>
    <string name="facui_chongxian_port_ypbpr">YPBPR</string>
    <string name="facui_chongxian_port_hdmi">HDMI</string>
    <string name="facui_chongxian_timing">Timing</string>
    <string name="facui_chongxian_tvin_3d_status">TVIN_3D_STATUS</string>
    <string name="facui_chongxian_status3d_disable">STATUS3D_DISABLE</string>
    <string name="facui_chongxian_status3d_auto">STATUS3D_AUTO</string>
    <string name="facui_chongxian_status3d_2d_to_3d">STATUS3D_2D_TO_3D</string>
    <string name="facui_chongxian_status3d_lr">STATUS3D_LR</string>
    <string name="facui_chongxian_status3d_bt">STATUS3D_BT</string>
    <string name="facui_chongxian_status3d_line_alternative">STATUS3D_LINE_ALTERNATIVE</string>
    <string name="facui_chongxian_status3d_frame_alternative">STATUS3D_FRAME_ALTERNATIVE</string>
    <string name="facui_chongxian_status3d_max">STATUS3D_MAX</string>
    <string name="facui_chongxian_tvin_trans_fmt">TVIN_TRANS_FMT</string>
    <string name="facui_chongxian_tvin_tfmt_2d">TVIN_TFMT_2D</string>
    <string name="facui_chongxian_tvin_tfmt_3d_lrh_olor">TVIN_TFMT_3D_LRH_OLOR</string>
    <string name="facui_chongxian_tvin_tfmt_3d_lrh_oler">TVIN_TFMT_3D_LRH_OLER</string>
    <string name="facui_chongxian_tvin_tfmt_3d_lrh_elor">TVIN_TFMT_3D_LRH_ELOR</string>
    <string name="facui_chongxian_tvin_tfmt_3d_lrh_eler">TVIN_TFMT_3D_LRH_ELER</string>
    <string name="facui_chongxian_tvin_tfmt_3d_tb">TVIN_TFMT_3D_TB</string>
    <string name="facui_chongxian_tvin_tfmt_3d_fp">TVIN_TFMT_3D_FP</string>
    <string name="facui_chongxian_tvin_tfmt_3d_fa">TVIN_TFMT_3D_FA</string>
    <string name="facui_chongxian_tvin_tfmt_3d_la">TVIN_TFMT_3D_LA</string>
    <string name="facui_chongxian_tvin_tfmt_3d_lrf">TVIN_TFMT_3D_LRF</string>
    <string name="facui_chongxian_tvin_tfmt_3d_ld">TVIN_TFMT_3D_LD</string>
    <string name="facui_chongxian_tvin_tfmt_3d_ldgd">TVIN_TFMT_3D_LDGD</string>
    <string name="facui_chongxian_tvin_tfmt_3d_det_tb">TVIN_TFMT_3D_DET_TB</string>
    <string name="facui_chongxian_tvin_tfmt_3d_det_lr">TVIN_TFMT_3D_DET_LR</string>
    <string name="facui_chongxian_tvin_tfmt_3d_det_interlace">TVIN_TFMT_3D_DET_INTERLACE</string>
    <string name="facui_chongxian_tvin_tfmt_3d_det_chessboard">TVIN_TFMT_3D_DET_CHESSBOARD</string>
    <string name="facui_chongxian_tvin_tfmt_3d_max">TVIN_TFMT_3D_MAX</string>
    <string name="facui_chongxian_hstart">H Start</string>
    <string name="facui_chongxian_vstart">V Start</string>
    <string name="facui_chongxian_hpos">H Pos</string>
    <string name="facui_chongxian_vpos">V Pos</string>
    <string name="facui_gongneng">功能设置</string>
    <string name="facui_gongneng_kaiji">开机</string>
    <string name="facui_gongneng_kaiji_direct">直接开机</string>
    <string name="facui_gongneng_kaiji_wait">直接待机</string>
    <string name="facui_gongneng_kaiji_remember">记忆</string>
    <string name="facui_gongneng_ceshitu">测试图</string>
    <string name="facui_gongneng_ceshitu_off">关</string>
    <string name="facui_gongneng_ceshitu_red">红</string>
    <string name="facui_gongneng_ceshitu_green">绿</string>
    <string name="facui_gongneng_ceshitu_blue">蓝</string>
    <string name="facui_gongneng_ceshitu_white">白</string>
    <string name="facui_gongneng_ceshitu_black">黑</string>
    <string name="facui_gongneng_beiguang">背光调节</string>
    <string name="facui_gongneng_beiguang_polar">背光极性</string>
    <string name="facui_gongneng_beiguang_polar_up">同向</string>
    <string name="facui_gongneng_beiguang_polar_down">反向</string>
    <string name="facui_gongneng_export_bin_file">一键做BIN</string>
    <string name="facui_laohua">老化模式</string>
    <string name="facui_laohua_on">开</string>
    <string name="facui_laohua_off">关</string>
    <string name="facui_pindaoyushe">工厂频道预设</string>
    <string name="facui_pindaoyushe_on">开</string>
    <string name="facui_pindaoyushe_off">关</string>
    <string name="facui_3dmode">设置3D开关</string>
    <string name="facui_Search_enhance">增强搜台功能</string>
    <string name="facui_3d_demo_mode">3D演示模式</string>
    <string name="facui_burn">工厂烧写</string>
    <string name="facui_macburn">MAC烧写</string>
    <string name="facui_idburn">ID号烧写</string>
    <string name="facui_userreset">用户复位</string>
    <string name="facui_facreset">工厂复位</string>
    <string name="facui_softinfo">软件信息</string>
    <string name="facui_softinfo_androidversion">Android版本</string>
    <string name="facui_softnum">软件版本号</string>
    <string name="facui_softinfo_bootversion">Boot版本</string>
    <string name="facui_softinfo_kernelversion">内核版本</string>
    <string name="facui_softinfo_tvversion">TV版本</string>
    <string name="facui_softinfo_dvbversion">DVB版本</string>
    <string name="facui_softinfo_fbcversion">FBC版本</string>
    <string name="facui_hdcpkey">HDMI HDCP DemoKey</string>
    <string name="facui_hdcp">HDCP</string>
    <string name="facui_hdmi">HDMI</string>
    <string name="facui_hdcp_demokey_on">开</string>
    <string name="facui_hdcp_demokey_off">关</string>
    <string name="facui_hdmi_demokey_on">开</string>
    <string name="facui_hdmi_demokey_off">关</string>
	<string name="confirm">confirm</string>
	<string name="cancel">cancel</string>
</resources>